src/test/ui/issue-3521-2.stderr
error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/issue-3521-2.rs:14:23
   |
LL |     static y: isize = foo + 1;
   |                       ^^^
   |
   = help: use the `|| { ... }` closure form instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0434`.
